--- a/FuncApp.fsproj
+++ b/FuncApp.fsproj
@@ -17,6 +17,10 @@
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.9" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.7.2" />
+  </ItemGroup>
 
   <ItemGroup>
     <Content Include="host.json">
